# shotgun-lang

./: .gitignore  DESIGN.md  LICENSE  Makefile  README.md  helix-config.toml  main.bs  run_tests.sh
.github/workflows/: ci.yml  release.yml
aur/: PKGBUILD
bootstrap/: FIXES.md  mini_lexer.bs  shotgun.toml  test_arithmetic  test_arrays.bs  test_control_flow.bs  test_generics.bs  test_maps.bs  test_strings  test_structs  test_variants.bs
bootstrap/lib/: ast.ml  codegen.ml  config.ml  errors.ml  lexer.mll  parser.mly  resolver.ml  semantic.ml
bootstrap/test/: test_compiler.ml
bootstrap_tests/: test.bs  test_arithmetic.bs  test_arrays.bs  test_closures.bs  test_control_flow.bs  test_generics.bs  test_maps.bs  test_strings.bs  test_structs.bs  test_variants.bs
compiler/: CMakeLists.txt  ast.bs  codegen.bs  codegen_expr.bs  codegen_items.bs  codegen_stmt.bs  codegen_types.bs  dune-project  lexer.bs  main.bs  parser.bs  parser_expr.bs  parser_items.bs  parser_match.bs  parser_stmt.bs  parser_strings.bs  parser_tokens.bs  parser_types.bs  semantic.bs  semantic_check.bs  semantic_env.bs  semantic_infer.bs  semantic_items.bs  semantic_types.bs  shotgun_compiler.opam  token.bs
compiler/include/: ast.hpp  codegen.hpp  lexer.hpp  parser.hpp  sema.hpp  symbol_table.hpp  token.hpp  types.hpp
compiler/lib/: ast.ml  codegen.ml  config.ml  dune  lexer.mll  parser.mly  resolver.ml  semantic.ml
compiler/src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp  sema.cpp  symbol_table.cpp  types.cpp
compiler/test/: dune  test_compiler.ml
compiler/tests/: test_lexer.cpp  test_parser.cpp  test_sema.cpp
docs/: examples.html  guide.html  index.html  quickstart.html
docs/css/: style.css
examples/: const_error.bs  const_test.bs  demo.bs  test.bs
llvm-compiler/include/: parser.hpp  sema.hpp  token.hpp  types.hpp
llvm-compiler/src/: main.cpp  parser.cpp  sema.cpp  symbol_table.cpp  types.cpp
llvm-compiler/tests/: test_codegen.cpp
src/: ast.bs  lexer.bs  main.bs  parser.bs  shotgun.toml  token.bs
tests/: run_tests.sh
tests/arrays/: array_index_assign.bs  array_push.bs  array_struct_size.bs
tests/basic/: arithmetic.bs  arrays.bs  break_continue.bs  break_continue.expected  constants.bs  hello.bs  string_arrays.bs  string_interpolation.bs  strings.bs  uses_helper.bs  uses_syntax.bs  var_infer.bs  var_infer.expected  variables.bs
tests/bootstrap/: mini_lexer.bs  test_arithmetic.bs  test_arrays  test_closures  test_closures.bs  test_control_flow  test_control_flow.bs  test_generics  test_generics.bs  test_maps  test_maps.bs  test_strings.bs  test_structs.bs  test_variants  test_variants.bs
tests/closures/: basic.bs  capture.bs  higher_order.bs  hof_capture.bs  inferred_return.bs
tests/concurrency/: goroutine  (+2 more)
tree-sitter-shotgun/: Cargo.toml  Makefile  binding.gyp  grammar.js  package.json
(+85 files in other folders)
