opam-version: "2.0"
name: "shotgun_compiler"
version: "0.1.0"
synopsis: "Shotgun language compiler"
maintainer: ["Chris Hayen <chris@shotgun.dev>"]
authors: ["Chris Hayen <chris@shotgun.dev>"]
license: "MIT"
homepage: "https://github.com/chrishayen/shotgun-lang"
bug-reports: "https://github.com/chrishayen/shotgun-lang/issues"
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.0"}
  "menhir"
  "ppx_deriving"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
